# home-dashboard

./: .env.example  .gitignore  README.md  compose.apple-calendar-bridge.yaml  compose.pi.yaml  compose.yaml  start.sh
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: activity_log.py  router.py
backend/app/core/: settings.py
backend/app/database/: models.py  session.py
backend/app/domain/: activity_feed.py  bluetooth_audio.py  calendar_bridge.py  chili_notify.py  dashboard_context.py  db_read.py  display.py  json_types.py  lights.py  notion.py  openclaw.py  sensors.py  spotify.py  switchbot.py  system_status.py  system_volume.py  voice_commands.py  voice_log.py  voice_state.py  walkingpad.py  walkingpad_manual.py  water_pump.py  weather.py
backend/app/jobs/: display_scheduler.py  sensor_polling.py
backend/app/tools/: __init__.py  discover_broadlink.py  discover_switchbot.py  learn_broadlink.py  (+1 more)
backend/tests/: test_activity_feed.py  test_bluetooth_audio.py  test_calendar_bridge.py  test_chili_notify.py  test_dashboard_context.py  test_db_read.py  test_display.py  test_notion.py  test_openclaw.py  test_openclaw_api.py  test_settings.py  test_spotify_cache.py  test_spotify_voice.py  test_system_status.py  test_system_volume.py  test_voice_commands.py  test_voice_log.py  test_voice_openclaw.py  test_voice_state.py  test_walkingpad.py  test_walkingpad_automation.py  test_walkingpad_manual.py  test_water_pump.py  test_weather.py
walkingpad-collector/: Dockerfile  pyproject.toml
walkingpad-collector/collector/: __init__.py  main.py
(+199 files in other folders)
