[project]
name = "chili-dashboard-backend"
version = "0.1.0"
description = "Local control API for Chili Home Dashboard"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "sqlalchemy>=2.0,<3.0",
  "alembic>=1.13,<2.0",
  "pydantic-settings>=2.6,<3.0",
  "broadlink>=0.19,<1.0",
  "adafruit-blinka>=8.0,<9.0",
  "adafruit-circuitpython-sht31d>=2.0,<3.0",
  "cryptography>=42.0,<50.0",
  "httpx>=0.27,<1.0",
  "websockets>=14,<17",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.uv]
package = false
